[package]
name = "yatorrent"
version = "0.1.0"
edition = "2021"
description = "Yet Another Torrent Client"

[dependencies]
sha1 = "0.10.6"
reqwest = "0.12.4"
tokio = { version = "1.39.2", features = ["full"]}
assert_matches = "1.5"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11.5"
size = "0.4.1"
trait-variant = "0.1.2"
clap = { version = "4.5.16", features = ["derive", "env"] }
num-bigint = "0.4.6"
derivative = "2.2.0"
anyhow = "1.0.87"
