[package]
name = "yatorrent"
version = "0.1.0"
edition = "2021"
description = "Yet Another Torrent Client"

[dependencies]
sha1 = "0.10.6"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["full"]}
assert_matches = "1.5"
rand = "0.9.1"
log = "0.4"
env_logger = "0.11.8"
size = "0.5.0"
trait-variant = "0.1.2"
clap = { version = "4.5.41", features = ["derive", "env"] }
num-bigint = "0.4.6"
derivative = "2.2.0"
anyhow = "1.0.98"
rlimit = "0.10.2"
url = "2.5.4"
percent-encoding = "2.3.1"
hex = "0.4.3"
