[package]
name = "yatorrent"
version = "0.1.0"
edition = "2024"
description = "Yet Another Torrent Client"

[dependencies]
sha1 = "0.10.6"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
assert_matches = "1.5"
rand = "0.9.2"
log = "0.4"
env_logger = "0.11.8"
size = "0.5.0"
trait-variant = "0.1.2"
clap = { version = "4.5.51", features = ["derive", "env"] }
num-bigint = "0.4.6"
derivative = "2.2.0"
anyhow = "1.0.100"
rlimit = "0.10.2"
url = "2.5.7"
percent-encoding = "2.3.2"
hex = "0.4.3"
thiserror = "2.0.17"
colored = "3.0.0"
